[project]
name = "chimei_gpt_agent"
version = "0.1.0"
description = "Chimei GPT Agent"
authors = [
    {name = "Fang-Bo Hsieh", email = "edward_hsieh@cht.com.tw"},
]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-adk = ">=0.0.2"
google-genai = "^1.9.0"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
streamlit = "^1.44.0"
google-cloud-aiplatform = {extras = ["adk", "agent-engines"], version = "^1.88.0"}


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"